Working on sorting and rendering of projects as cards

--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,7 @@ github_username:  pcameron-
 # Build settings
 markdown: kramdown
 github: [metadata]
+
+collections:
+  projects:
+    output: true
