--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: pcameron.com
-email: your-email@domain.com
+email: pcameron@pcameron.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal site that contains past and current personal projects.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://pcameron.com" # the base hostname & protocol for your site
-github_username:  pcameron-
+github_username: pcameron-
 
 # Build settings
 markdown: kramdown
