--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,8 @@ github: [metadata]
 collections:
   projects:
     output: true
+
+webrick:
+  headers:
+    X-Frame-Options: DENY
+    Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
